dvbrecording: Fix it to update stats using UTC time

As report on Bug 354522 ("repeated recordings get time-shifted by
daylight-saving-time switches (edit)"), when the timezone shifts,
Kaffeine doesn't properly handle TZ updates.

BUG: 354522
Signed-off-by: Mauro Carvalho Chehab <mchehab@s-opensource.com>